# scriptorium

./: .env.example  .gitignore  README.md  docker-compose.yml  postgres-init-test-db.sql
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: api_tokens.py  auth.py  eval_results.py  eval_test_cases.py  eval_test_collections.py  ingestion.py  rag.py  search.py  search_configurations.py  users.py
backend/app/auth/: api_keys.py  bootstrap.py  dependencies.py  models.py  security.py  tokens.py
backend/app/core/: config.py  db.py
backend/app/db/: base.py  session.py
backend/app/embeddings/: model.py
backend/app/eval/: export.py  metrics.py  models.py  reporting.py  runner.py
backend/app/rag/: citations.py  constants.py  history.py  llm.py  loop.py  models.py  tools.py
backend/app/registry/: __init__.py  analyzers.py  language_pack.py  loader.py
backend/app/search/: client.py  index_manager.py  ingest.py  mapping.py  models.py  presets.py  query.py  service.py
backend/cli/: create_admin.py  embed_documents.py  embedding_cli.py  ingest_documents.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_tokens_api.py  test_auth_api.py  test_create_admin.py  test_eval_results_api.py  test_eval_runner.py  test_eval_test_cases_api.py  test_eval_test_collections_api.py  test_ingestion_api.py  test_rag_conversations_api.py  test_rag_stream_wire_format.py  test_role_seed.py  test_search_api.py  test_search_configurations_api.py  test_users_api.py
backend/tests/unit/: test_analyzers.py  test_config.py  (+15 more)
(+92 files in other folders)
