[project]
name = "scriptorium-backend"
version = "0.1.0"
description = "Scriptorium API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.4",
    "alembic>=1.13",
    "pwdlib[argon2]>=0.2",
    "pyjwt>=2.9",
    "opensearch-py>=2.6",
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "sentencepiece>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx2>=2.0",
    "ruff>=0.8",
]
cli = [
    "httpx>=0.27",
]

[project.scripts]
scriptorium-embed = "cli.embed_documents:main"
scriptorium-ingest = "cli.ingest_documents:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Depends(...) as a default arg is FastAPI's required idiom, not a bug
